# cookiecutter-hypermodern-python-ml-example

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  labeler.yml  tests.yml
cookiecutter_hypermodern_python_ml_example/: __init__.py
cookiecutter_hypermodern_python_ml_example/contracts/: __init__.py  contract_transformer.py
cookiecutter_hypermodern_python_ml_example/pipeline/: __init__.py  model.py  selector.py  transformer.py
cookiecutter_hypermodern_python_ml_example/schemas/: __init__.py  raw.py  selected.py  transformed.py
cookiecutter_hypermodern_python_ml_example/tasks/: __init__.py  evaluate_pipeline.py  load_data.py  make_pipeline.py  score_data.py  select_features.py  train_model.py  transform_data.py
docs/: conf.py  index.md  reference.md
tests/: __init__.py  test_transformer.py
