[tool.poetry]
name = "cookiecutter-hypermodern-python-ml-example"
version = "0.1.0"
homepage = "https://github.com/mdsach/cookiecutter-hypermodern-python-ml-example"
description = "Example project created from the Hypermodern Python ML Cookiecutter."
authors = ["Matthew Sach <mdsach@alumni.stanford.edu>"]
readme = "README.md"
license = "MIT license"

[tool.poetry.urls]
Changelog = "https://github.com/mdsach/cookiecutter-hypermodern-python-ml-example/releases"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scikit-learn = "^1.1.3"
pandas = "^1.5.1"
pydantic = "^1.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
coverage = { extras = ["toml"], version = ">=6.5.0" }
flake8 = "^5.0.4"
mypy = "^0.982"
pre-commit = "^2.20.0"
pre-commit-hooks = "^4.3.0"
pyupgrade = "^3.2.0"
safety = "^2.3.1"
sphinx = "^5.3.0"
furo = "^2022.9.29"
sphinx-autobuild = "^2021.3.14"
typeguard = "^2.13.3"
myst-parser = "^0.18.1"
xdoctest = { extras = ["colors"], version = "^1.1.0" }
pep8-naming = "^0.13.2"
flake8-bugbear = "^22.10.27"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.7"
nox-poetry = "^1.0.1"
isort = "^5.10.1"
pandas-stubs = "^1.5.1.221024"

[tool.coverage.paths]
source = ["cookiecutter_hypermodern_python_ml_example", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["cookiecutter_hypermodern_python_ml_example", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
